@@ -20,16 +20,18 @@
 | 🐛
 | Embed the namespace in request body while creating channels
 | https://github.com/knative/client/pull/1117[#1117]
-|===
 
 | 🎁
 | Add "url" output format to return broker url in broker describe and channel url in channel describe
 | https://github.com/knative/client/pull/1118[#1118]
-|===
 
 | 🎁
 | Add machine readable output (-o flag) to kn broker describe
 | https://github.com/knative/client/pull/1124[#1124]
+
+| 🎁
+| Add machine readable output (-o flag) to kn trigger describe
+| https://github.com/knative/client/pull/1121[#1121]
 |===
 
 ### v0.19.0 (2020-11-11)
